Added Discussion forum feature

--- a/all/public/index.html
+++ b/all/public/index.html
@@ -12,7 +12,7 @@
 	<body>
 
 		<div id="landing-header">
-			<h1>Welcome to Movie Mania</h1>
+			<h1>Welcome to Cinema Visor</h1>
 			<a href="/trending-all/1" class="btn btn-lg btn-default">Discover Now!</a>
 		</div>
 
