--- a/all/public/index.html
+++ b/all/public/index.html
@@ -13,7 +13,7 @@
 
 		<div id="landing-header">
 			<h1>Welcome to Cinema Visor</h1>
-			<a href="/trending-all/1" class="btn btn-lg btn-default">Discover Now!</a>
+			<a href="/trending-movies/1" class="btn btn-lg btn-default">Discover Now!</a>
 		</div>
 
 		<ul class="slideshow">
